[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "micrologs"
version = "1.0.0"
description = "Python SDK for Micrologs - self-hosted analytics and error tracking"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Om Dongaonkar", email = "officialom@gmail.com" }]
requires-python = ">=3.8"
keywords = ["analytics", "error-tracking", "self-hosted", "micrologs", "privacy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/OmDongaonkar03/Micrologs"
Repository = "https://github.com/OmDongaonkar03/micrologs-python"
Issues = "https://github.com/OmDongaonkar03/micrologs-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["micrologs*"]